# pixel100percent

./: .gitignore  README.md  components.json  forge.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vite.renderer.config.ts
src/: App.tsx  app.tsx  global.css  globals.css  main.ts  main.tsx  renderer.ts  theme-config.css  theme.ts  types.ts
src-electron/: main.ts  preload.ts  renderer.ts
src-electron/images/: icon.icns
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/@types/: index.ts
src/components/: control-windowsize-button.tsx  image-dropzone.tsx  popover-window-size-button.tsx  slider-opacity.tsx
src/components/complex/: overlay-image.tsx
src/hooks/: use-chakra-color-mode.ts  use-file-path.ts  use-image-dropzone.ts  use-keydown.ts  use-load-image.ts  use-mouse-over.ts  use-move-window.ts  use-opacity-slider.ts  use-slider-opacity.ts  use-toggle-always-on-top.ts  use-update-window-size.ts
src/routes/: overlay.tsx  root.tsx
